@@ -35,6 +35,68 @@ tx_rnbase::load('tx_rnbase_util_BaseMarker');
  */
 class tx_cfcleaguefe_hooks_TableMatchMarker {
 
+	/**
+	 * Add match table with current round in match report
+	 * @param array $params
+	 * @param tx_cfcleaguefe_util_MatchReport $parent
+	 */
+	public function addCurrentRound($params, $parent) {
+		$template = $params['template'];
+		$marker = $params['marker'];
+		if(!tx_rnbase_util_BaseMarker::containsMarker($template, $marker.'_MTCURRENTROUND')) return;
+
+		$formatter = $params['formatter'];
+		$matches = $this->getCurrentRound($params, $formatter);
+		$markerArray['###'.$marker.'_MTCURRENTROUND###'] = $matches;
+		$params['template'] = tx_rnbase_util_Templates::substituteMarkerArrayCached($template, $markerArray, $subpartArray, $wrappedSubpartArray);
+	}
+
+	/**
+	 * Generate current round
+	 * @param array $params
+	 * @param tx_rnbase_util_FormatUtil $formatter
+	 */
+	private function getCurrentRound($params, $formatter) {
+		$match = $this->getMatch($params);
+		if(!is_object($match)) return ''; // The call is not for us
+
+		$confId = 'matchreport.mtcurrentround.';
+		$fields = array();
+		$options = array();
+		tx_rnbase_util_SearchBase::setConfigFields($fields, $formatter->getConfigurations(), $confId.'fields.');
+		tx_rnbase_util_SearchBase::setConfigOptions($options, $formatter->getConfigurations(), $confId.'options.');
+
+		$srv = tx_cfcleaguefe_util_ServiceRegistry::getMatchService();
+		$matchTable = $srv->getMatchTable();
+		$matchTable->setCompetitions($match->getCompetition()->uid);
+		$matchTable->setRounds($match->getRound());
+		$matchTable->getFields($fields, $options);
+		$matches = $srv->search($fields, $options);
+
+		$subpartName = $formatter->getConfigurations()->get('subpartName');
+		$subpartName = $subpartName ? $subpartName : '###CURRENTROUND_MATCHES###';
+		$template = '';
+		try {
+			$template = tx_rnbase_util_Templates::getSubpartFromFile(
+				$formatter->configurations->get($confId.'template'), $subpartName);
+		}
+		catch(Exception $e) {
+			tx_rnbase::load('tx_rnbase_util_Logger');
+			tx_rnbase_util_Logger::info('Error for matchtable current round: '. $e->getMessage(), 'cfc_league_fe');
+		}
+		if(!$template) return '';
+
+		$listBuilder = tx_rnbase::makeInstance('tx_rnbase_util_ListBuilder');
+		$out = $listBuilder->render($matches,
+						false, $template, 'tx_cfcleaguefe_util_MatchMarker',
+						$confId.'match.', 'MATCH', $formatter);
+		return $out;
+	}
+	/**
+	 * Add league table in match report
+	 * @param array $params
+	 * @param tx_cfcleaguefe_util_MatchReport $parent
+	 */
 	public function addLeagueTable($params, $parent) {
 		$template = $params['template'];
 		$marker = $params['marker'];
@@ -88,7 +150,7 @@ class tx_cfcleaguefe_hooks_TableMatchMarker {
 	 * @param array $params
 	 * @return tx_cfcleaguefe_models_match or false
 	 */
-	function getMatch($params){
+	private function getMatch($params){
 		if(!isset($params['match'])) return false;
 		return $params['match'];
 	}
